@@ -17,17 +17,16 @@ import com.disaster.analysis.domain.model.enums.TimeGranularity;
 import com.disaster.analysis.ui.navigation.Navigator;
 import com.disaster.analysis.util.DialogUtil;
 import com.disaster.analysis.util.LogUtil;
+import com.disaster.analysis.util.TextParser;
 import javafx.collections.FXCollections;
 import javafx.concurrent.Task;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
-import javafx.scene.chart.BarChart;
-import javafx.scene.chart.CategoryAxis;
-import javafx.scene.chart.LineChart;
-import javafx.scene.chart.XYChart;
+import javafx.scene.chart.*;
 import javafx.scene.control.*;
 import javafx.scene.input.Clipboard;
 import javafx.scene.input.ClipboardContent;
+import javafx.scene.layout.GridPane;
 import javafx.stage.FileChooser;
 
 import java.io.File;
@@ -39,10 +38,14 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 import javafx.collections.ObservableList;
+import javafx.util.StringConverter;
 
 public class AnalysisController implements Initializable {
 
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
+    private static final String POSITIVE_COLOR = "#10b981";
+    private static final String NEUTRAL_COLOR = "#d9a014";
+    private static final String NEGATIVE_COLOR = "#ef4444";
 
     // Project Info Labels
     @FXML
@@ -53,7 +56,7 @@ public class AnalysisController implements Initializable {
 
     // Sentiment Analysis Tab Components
     @FXML
-    private ComboBox<String> timeGranularityComboBox;
+    private ComboBox<TimeGranularity> timeGranularityComboBox;
 
     @FXML
     private Button runSentimentButton;
@@ -84,33 +87,25 @@ public class AnalysisController implements Initializable {
     private BarChart<String, Number> damageChart;
 
     @FXML
-    private ListView<String> samplePostsListView;
-
-    @FXML
-    private Label samplePostsCountLabel;
+    private GridPane damageCountsGrid;
 
     // Action Buttons
-    @FXML
-    private Button backButton;
 
     @FXML
     private Button exportButton;
 
     // AI Summary Tab Components
     @FXML
-    private Button generateSummaryButton;
+    private Button generateSummaryDamageButton;
 
     @FXML
-    private TextArea summaryTextArea;
+    private TextArea summaryTextDamageArea;
 
     @FXML
-    private ProgressIndicator summaryProgressIndicator;
+    private Button generateSummarySentimentButton;
 
     @FXML
-    private Button copySummaryButton;
-
-    @FXML
-    private Label summaryMetadataLabel;
+    private TextArea summaryTextSentimentArea;
 
     // Services
     private SentimentAnalysisService sentimentService;
@@ -130,6 +125,7 @@ public class AnalysisController implements Initializable {
 
     public AnalysisController() {
     }
+
 
 
     public AnalysisController(SentimentAnalysisService sentimentService,
@@ -161,35 +157,28 @@ public class AnalysisController implements Initializable {
         }
         // Get current project from context
         this.currentProject = applicationContext.getCurrentProject();
-
-        // Initialize services after dependencies are injected
-        // try {
-        //     if (sentimentService != null) {
-        //         sentimentService.initialize();
-        //     }
-        //     if (damageService != null) {
-        //         damageService.initialize();
-        //     }
-        // } catch (Exception e) {
-        //     LogUtil.error("Failed to initialize analysis services", e);
-        //     DialogUtil.showErrorWithDetails("Initialization Error",
-        //         "Failed to initialize analysis services", e);
-        // }
-
-        // Update UI after dependencies are injected
         updateProjectInfo();
-
-        // Load existing AI summary if available
         loadExistingSummary();
+        updateDamageChart();
+        updateDamageCountsGrid();
     }
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
         // Initialize time granularity combo box
-        timeGranularityComboBox.setItems(FXCollections.observableArrayList(
-                "Hourly", "Daily", "Weekly", "Monthly"
-        ));
-        timeGranularityComboBox.setValue("Daily");
+        timeGranularityComboBox.setItems(FXCollections.observableArrayList(TimeGranularity.values()));
+        timeGranularityComboBox.setConverter(new StringConverter<>() {
+            @Override
+            public String toString(TimeGranularity granularity) {
+                return granularity == null ? "" : formatGranularity(granularity);
+            }
+
+            @Override
+            public TimeGranularity fromString(String value) {
+                return TimeGranularity.valueOf(value.toUpperCase(Locale.ENGLISH));
+            }
+        });
+        timeGranularityComboBox.setValue(TimeGranularity.DAILY);
 
         // Initialize category filter combo box with "All Categories" option
         List<String> categoryOptions = new ArrayList<>();
@@ -209,13 +198,25 @@ public class AnalysisController implements Initializable {
         }
 
         // Initialize AI Summary UI components
-        if (summaryProgressIndicator != null) {
-            summaryProgressIndicator.setVisible(false);
+        if (summaryTextSentimentArea != null) {
+            summaryTextSentimentArea.setEditable(false);
+            summaryTextSentimentArea.setWrapText(true);
         }
-        if (summaryTextArea != null) {
-            summaryTextArea.setEditable(false);
-            summaryTextArea.setWrapText(true);
+
+        if (summaryTextDamageArea != null) {
+            summaryTextDamageArea.setEditable(false);
+            summaryTextDamageArea.setWrapText(true);
         }
+
+        configureSentimentChartAxes();
+
+        timeGranularityComboBox.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
+            if (newValue != null) {
+                // Cập nhật lại biến granularity hiện tại bằng giá trị mới người dùng vừa chọn
+                this.currentGranularity = newValue;
+                updateSentimentChart();
+            }
+        });
 
         // Note: Service initialization and updateProjectInfo() are called in setApplicationContext()
         // after dependencies are injected
@@ -335,6 +336,7 @@ public class AnalysisController implements Initializable {
             runDamageButton.setText("Run Damage Analysis");
             String result = analysisTask.getValue();
             updateDamageChart();
+            updateDamageCountsGrid();
             updateSamplePosts();
             DialogUtil.showInformation("Analysis Complete",
                     "Damage classification completed! " + result);
@@ -356,8 +358,6 @@ public class AnalysisController implements Initializable {
         analysisThread.setDaemon(true);
         analysisThread.start();
     }
-
-
     private void updateSentimentChart() {
         if (currentProject == null || currentProject.getId() == null) {
             return;
@@ -365,11 +365,14 @@ public class AnalysisController implements Initializable {
 
         try {
             // Get sentiment time series data
+            sentimentChart.setLegendVisible(false);
             Map<LocalDateTime, Map<Sentiment, Long>> timeSeries =
                     sentimentService.getSentimentTimeSeries(currentProject.getId(), currentGranularity);
 
             // Clear existing data
             sentimentChart.getData().clear();
+
+            configureSentimentChartAxes();
 
             // Create series for each sentiment type
             XYChart.Series<String, Number> positiveSeries = new XYChart.Series<>();
@@ -388,7 +391,6 @@ public class AnalysisController implements Initializable {
 
             // Populate series with data
             DateTimeFormatter formatter = getFormatterForGranularity(currentGranularity);
-
             for (Map.Entry<LocalDateTime, Map<Sentiment, Long>> entry : timeSeries.entrySet()) {
                 String timeLabel = entry.getKey().format(formatter);
                 Map<Sentiment, Long> sentimentCounts = entry.getValue();
@@ -410,6 +412,7 @@ public class AnalysisController implements Initializable {
             sentimentChart.getData().add(positiveSeries);
             sentimentChart.getData().add(neutralSeries);
             sentimentChart.getData().add(negativeSeries);
+            applySentimentSeriesColors(positiveSeries, neutralSeries, negativeSeries);
 
             // Update statistics labels
             positiveCountLabel.setText(String.valueOf(totalPositive));
@@ -423,18 +426,44 @@ public class AnalysisController implements Initializable {
     }
 
 
+    private void applySentimentSeriesColors(XYChart.Series<String, Number> positiveSeries,
+                                            XYChart.Series<String, Number> neutralSeries,
+                                            XYChart.Series<String, Number> negativeSeries) {
+        javafx.application.Platform.runLater(() -> {
+            styleLineSeries(positiveSeries, POSITIVE_COLOR);
+            styleLineSeries(neutralSeries, NEUTRAL_COLOR);
+            styleLineSeries(negativeSeries, NEGATIVE_COLOR);
+        });
+    }
+
+
+    private void styleLineSeries(XYChart.Series<String, Number> series, String color) {
+        if (series.getNode() != null) {
+            series.getNode().setStyle("-fx-stroke: " + color + ";");
+        }
+
+        for (XYChart.Data<String, Number> data : series.getData()) {
+            if (data.getNode() != null) {
+                data.getNode().setStyle("-fx-background-color: " + color + ", white;");
+            }
+        }
+    }
+
+
     private void updateDamageChart() {
         if (currentProject == null || currentProject.getId() == null) {
             return;
         }
 
         try {
-            // Get damage category distribution
+            // Get damage category distribution using the currently selected filters.
             Map<DamageCategory, Long> distribution =
-                    damageService.getDamageCategoryDistribution(currentProject.getId());
+                    getFilteredDamageCategoryDistribution(currentProject.getId());
 
             // Clear existing data
             damageChart.getData().clear();
+            damageChart.setBarGap(4);
+            configureDamageChartAxes();
 
             // Create series for damage categories
             XYChart.Series<String, Number> series = new XYChart.Series<>();
@@ -443,18 +472,21 @@ public class AnalysisController implements Initializable {
             // Sort categories by count (descending)
             List<Map.Entry<DamageCategory, Long>> sortedEntries = distribution.entrySet().stream()
                     .sorted(Map.Entry.<DamageCategory, Long>comparingByValue().reversed())
-                    .collect(Collectors.toList());
-
+                    .toList();
+            damageChart.setCategoryGap(24);
             if (damageChart.getXAxis() instanceof CategoryAxis xAxis) {
                 xAxis.getCategories().clear();
 
                 // TẠO DANH SÁCH NHÃN ĐỘC LẬP
-                ObservableList<String> categories = FXCollections.observableArrayList();
-                for (Map.Entry<DamageCategory, Long> entry : sortedEntries) {
-                    categories.add(entry.getKey().getDisplayName());
-                }
+                ObservableList<String> categories = buildDamageAxisCategories(sortedEntries);
+
                 // Ép trục X phải chia đều không gian cho các nhãn này
+                xAxis.getCategories().clear();
                 xAxis.setCategories(categories);
+                xAxis.invalidateRange(categories);
+
+                damageChart.layout();
+                xAxis.setGapStartAndEnd(true);
             }
 
             // Populate series with data
@@ -466,6 +498,7 @@ public class AnalysisController implements Initializable {
 
             // Add series to chart
             damageChart.getData().add(series);
+            applyDamageBarTooltips(series, getFilteredDamageCountSummary(currentProject.getId()));
 
         } catch (Exception e) {
             LogUtil.error("Failed to update damage chart", e);
@@ -474,24 +507,20 @@ public class AnalysisController implements Initializable {
     }
 
 
-    @FXML
-    private void handleTimeGranularityChange() {
-        String selected = timeGranularityComboBox.getValue();
-
-        if (selected == null) {
-            return;
+    private ObservableList<String> buildDamageAxisCategories(List<Map.Entry<DamageCategory, Long>> sortedEntries) {
+        ObservableList<String> categories = FXCollections.observableArrayList();
+        for (Map.Entry<DamageCategory, Long> entry : sortedEntries) {
+            categories.add(entry.getKey().getDisplayName());
         }
 
-        // Map selection to TimeGranularity enum
-        currentGranularity = switch (selected) {
-            case "Hourly" -> TimeGranularity.HOURLY;
-            case "Weekly" -> TimeGranularity.WEEKLY;
-            case "Monthly" -> TimeGranularity.MONTHLY;
-            default -> TimeGranularity.DAILY;
-        };
+        if (categories.size() == 1) {
+            int targetSlots = DamageCategory.values().length;
+            for (int index = 1; index < targetSlots; index++) {
+                categories.add(" ".repeat(index));
+            }
+        }
 
-        // Refresh the sentiment chart with new granularity
-        updateSentimentChart();
+        return categories;
     }
 
 
@@ -517,6 +546,36 @@ public class AnalysisController implements Initializable {
 
         // Update sample posts list
         updateSamplePosts();
+        updateDamageChart();
+        updateDamageCountsGrid();
+    }
+
+
+    private void configureDamageChartAxes() {
+        if (damageChart.getYAxis() instanceof NumberAxis yAxis) {
+            yAxis.setLabel(getDamageYAxisLabel());
+            yAxis.setMinorTickVisible(false);
+            yAxis.setTickLabelFormatter(new StringConverter<>() {
+                @Override
+                public String toString(Number value) {
+                    return String.valueOf(value.longValue());
+                }
+
+                @Override
+                public Number fromString(String value) {
+                    return Long.parseLong(value);
+                }
+            });
+        }
+    }
+
+
+    private String getDamageYAxisLabel() {
+        return switch (currentContentTypeFilter) {
+            case "Posts" -> "Number of Posts";
+            case "Comments" -> "Number of Comments";
+            default -> "Number of Posts and Comments";
+        };
     }
 
 
@@ -532,6 +591,175 @@ public class AnalysisController implements Initializable {
 
         // Update sample posts list
         updateSamplePosts();
+        updateDamageChart();
+        updateDamageCountsGrid();
+    }
+
+
+    private Map<DamageCategory, Long> getFilteredDamageCategoryDistribution(Long projectId) {
+        Map<DamageCategory, Long> distribution = new EnumMap<>(DamageCategory.class);
+
+        if ("All".equals(currentContentTypeFilter) || "Posts".equals(currentContentTypeFilter)) {
+            List<PostDTO> posts = applicationContext.getProjectService().getPostsByProjectId(projectId);
+            for (PostDTO post : posts) {
+                addDamageCategories(distribution, post.getDamageCategories());
+            }
+        }
+
+        if ("All".equals(currentContentTypeFilter) || "Comments".equals(currentContentTypeFilter)) {
+            List<CommentDTO> comments = applicationContext.getProjectService().getCommentsByProjectId(projectId);
+            for (CommentDTO comment : comments) {
+                addDamageCategories(distribution, comment.getDamageCategories());
+            }
+        }
+
+        if (currentCategoryFilter == null) {
+            return distribution;
+        }
+
+        Map<DamageCategory, Long> filteredDistribution = new EnumMap<>(DamageCategory.class);
+        filteredDistribution.put(currentCategoryFilter, distribution.getOrDefault(currentCategoryFilter, 0L));
+        return filteredDistribution;
+    }
+
+
+    private void addDamageCategories(Map<DamageCategory, Long> distribution, Set<DamageCategory> categories) {
+        if (categories == null || categories.isEmpty()) {
+            return;
+        }
+
+        for (DamageCategory category : categories) {
+            if (currentCategoryFilter == null || currentCategoryFilter == category) {
+                distribution.merge(category, 1L, Long::sum);
+            }
+        }
+    }
+
+
+    private void applyDamageBarTooltips(XYChart.Series<String, Number> series, DamageCountSummary counts) {
+        javafx.application.Platform.runLater(() -> {
+            for (XYChart.Data<String, Number> data : series.getData()) {
+                DamageCategory category = findDamageCategoryByDisplayName(data.getXValue());
+                if (category == null || data.getNode() == null) {
+                    continue;
+                }
+
+                long postCount = counts.postCounts().getOrDefault(category, 0L);
+                long commentCount = counts.commentCounts().getOrDefault(category, 0L);
+                long totalCount = postCount + commentCount;
+
+                Tooltip.install(data.getNode(), new Tooltip(String.format(
+                        "%s%nTotal: %d%nPosts: %d%nComments: %d",
+                        category.getDisplayName(),
+                        totalCount,
+                        postCount,
+                        commentCount
+                )));
+            }
+        });
+    }
+
+
+    private DamageCategory findDamageCategoryByDisplayName(String displayName) {
+        for (DamageCategory category : DamageCategory.values()) {
+            if (category.getDisplayName().equals(displayName)) {
+                return category;
+            }
+        }
+        return null;
+    }
+
+
+    private void updateDamageCountsGrid() {
+        if (damageCountsGrid == null || currentProject == null || currentProject.getId() == null) {
+            return;
+        }
+
+        try {
+            DamageCountSummary counts = getFilteredDamageCountSummary(currentProject.getId());
+            List<DamageCategory> categories = Arrays.stream(DamageCategory.values())
+                    .filter(category -> currentCategoryFilter == null || currentCategoryFilter == category)
+                    .sorted(Comparator.comparingLong((DamageCategory category) -> counts.totalFor(category)).reversed())
+                    .toList();
+
+            damageCountsGrid.getChildren().clear();
+            damageCountsGrid.add(createDamageCountLabel("Category", "stat-title"), 0, 0);
+            damageCountsGrid.add(createDamageCountLabel("Total", "stat-title"), 1, 0);
+            damageCountsGrid.add(createDamageCountLabel("Posts", "stat-title"), 2, 0);
+            damageCountsGrid.add(createDamageCountLabel("Comments", "stat-title"), 3, 0);
+
+            int row = 1;
+            for (DamageCategory category : categories) {
+                long postCount = counts.postCounts().getOrDefault(category, 0L);
+                long commentCount = counts.commentCounts().getOrDefault(category, 0L);
+                long totalCount = postCount + commentCount;
+
+                damageCountsGrid.add(createDamageCountLabel(category.getDisplayName(), "label-value-white"), 0, row);
+                damageCountsGrid.add(createDamageCountLabel(String.valueOf(totalCount), "stat-val-total"), 1, row);
+                damageCountsGrid.add(createDamageCountLabel(String.valueOf(postCount), "label-value-cyan"), 2, row);
+                damageCountsGrid.add(createDamageCountLabel(String.valueOf(commentCount), "label-value-cyan"), 3, row);
+                row++;
+            }
+        } catch (Exception e) {
+            LogUtil.error("Failed to update damage count summary", e);
+            DialogUtil.showError("Update Failed", "Failed to update damage count summary");
+        }
+    }
+
+
+    private Label createDamageCountLabel(String text, String styleClass) {
+        Label label = new Label(text);
+        label.getStyleClass().add(styleClass);
+        label.setMaxWidth(Double.MAX_VALUE);
+        return label;
+    }
+
+
+    private DamageCountSummary getFilteredDamageCountSummary(Long projectId) {
+        Map<DamageCategory, Long> postCounts = new EnumMap<>(DamageCategory.class);
+        Map<DamageCategory, Long> commentCounts = new EnumMap<>(DamageCategory.class);
+
+        for (DamageCategory category : DamageCategory.values()) {
+            postCounts.put(category, 0L);
+            commentCounts.put(category, 0L);
+        }
+
+        if ("All".equals(currentContentTypeFilter) || "Posts".equals(currentContentTypeFilter)) {
+            List<PostDTO> posts = applicationContext.getProjectService().getPostsByProjectId(projectId);
+            for (PostDTO post : posts) {
+                addDamageCategoriesForCounts(postCounts, post.getDamageCategories());
+            }
+        }
+
+        if ("All".equals(currentContentTypeFilter) || "Comments".equals(currentContentTypeFilter)) {
+            List<CommentDTO> comments = applicationContext.getProjectService().getCommentsByProjectId(projectId);
+            for (CommentDTO comment : comments) {
+                addDamageCategoriesForCounts(commentCounts, comment.getDamageCategories());
+            }
+        }
+
+        return new DamageCountSummary(postCounts, commentCounts);
+    }
+
+
+    private void addDamageCategoriesForCounts(Map<DamageCategory, Long> counts, Set<DamageCategory> categories) {
+        if (categories == null || categories.isEmpty()) {
+            return;
+        }
+
+        for (DamageCategory category : categories) {
+            if (currentCategoryFilter == null || currentCategoryFilter == category) {
+                counts.merge(category, 1L, Long::sum);
+            }
+        }
+    }
+
+
+    private record DamageCountSummary(Map<DamageCategory, Long> postCounts,
+                                      Map<DamageCategory, Long> commentCounts) {
+        long totalFor(DamageCategory category) {
+            return postCounts.getOrDefault(category, 0L) + commentCounts.getOrDefault(category, 0L);
+        }
     }
 
 
@@ -687,10 +915,59 @@ public class AnalysisController implements Initializable {
 
     private DateTimeFormatter getFormatterForGranularity(TimeGranularity granularity) {
         return switch (granularity) {
-            case HOURLY -> DateTimeFormatter.ofPattern("MM-dd HH:00");
-            case DAILY -> DateTimeFormatter.ofPattern("MM-dd");
-            case WEEKLY -> DateTimeFormatter.ofPattern("MM-dd");
-            case MONTHLY -> DateTimeFormatter.ofPattern("yyyy-MM");
+            case HOURLY -> DateTimeFormatter.ofPattern("MMM dd, HH:00", Locale.ENGLISH);
+            case DAILY -> DateTimeFormatter.ofPattern("MMM dd", Locale.ENGLISH);
+            case WEEKLY -> DateTimeFormatter.ofPattern("'Week of' MMM dd", Locale.ENGLISH);
+            case MONTHLY -> DateTimeFormatter.ofPattern("MMM yyyy", Locale.ENGLISH);
+        };
+    }
+
+
+    private void configureSentimentChartAxes() {
+        sentimentChart.setTitle("Sentiment Distribution Over Time");
+
+        if (sentimentChart.getXAxis() instanceof CategoryAxis xAxis) {
+            xAxis.setLabel(getTimeAxisLabel(currentGranularity));
+            xAxis.setTickLabelsVisible(true);
+            xAxis.setTickMarkVisible(true);
+            xAxis.setTickLabelRotation(-35);
+            xAxis.setTickLabelGap(8);
+        }
+
+        if (sentimentChart.getYAxis() instanceof NumberAxis yAxis) {
+            yAxis.setLabel("Number of Posts");
+            yAxis.setMinorTickVisible(false);
+            yAxis.setTickLabelFormatter(new StringConverter<>() {
+                @Override
+                public String toString(Number value) {
+                    return String.valueOf(value.longValue());
+                }
+
+                @Override
+                public Number fromString(String value) {
+                    return Long.parseLong(value);
+                }
+            });
+        }
+    }
+
+
+    private String getTimeAxisLabel(TimeGranularity granularity) {
+        return switch (granularity) {
+            case HOURLY -> "Time Period (Hour)";
+            case DAILY -> "Time Period (Day)";
+            case WEEKLY -> "Time Period (Week)";
+            case MONTHLY -> "Time Period (Month)";
+        };
+    }
+
+
+    private String formatGranularity(TimeGranularity granularity) {
+        return switch (granularity) {
+            case HOURLY -> "Hourly";
+            case DAILY -> "Daily";
+            case WEEKLY -> "Weekly";
+            case MONTHLY -> "Monthly";
         };
     }
 
@@ -826,19 +1103,24 @@ public class AnalysisController implements Initializable {
                 currentSummary = existingSummary.get();
 
                 // Display summary text
-                if (summaryTextArea != null) {
-                    summaryTextArea.setText(currentSummary.getSummaryText());
+                if (summaryTextSentimentArea != null) {
+                    summaryTextSentimentArea.setText(TextParser.getCompleteSentimentReport(currentSummary.getSummaryText()));
+                }
+
+                if (summaryTextDamageArea != null) {
+                    summaryTextDamageArea.setText(TextParser.getCompleteDamageReport(currentSummary.getSummaryText()));
                 }
 
                 // Update metadata label
-                if (summaryMetadataLabel != null) {
-                    String metadata = formatSummaryMetadata(currentSummary);
-                    summaryMetadataLabel.setText(metadata);
-                }
+
+
 
                 // Change button text to "Regenerate Summary"
-                if (generateSummaryButton != null) {
-                    generateSummaryButton.setText("Regenerate Summary");
+                if (generateSummarySentimentButton != null) {
+                    generateSummarySentimentButton.setText("Regenerate Sentiment Summary");
+                }
+                if (generateSummaryDamageButton != null) {
+                    generateSummaryDamageButton.setText("Regenerate Damage Summary");
                 }
 
                 LogUtil.info("Loaded existing AI summary for project: " + currentProject.getName());
@@ -846,16 +1128,21 @@ public class AnalysisController implements Initializable {
                 // No summary exists - leave UI in default state
                 currentSummary = null;
 
-                if (summaryTextArea != null) {
-                    summaryTextArea.setText("");
+                if (summaryTextSentimentArea != null) {
+                    summaryTextSentimentArea.setText("");
                 }
 
-                if (summaryMetadataLabel != null) {
-                    summaryMetadataLabel.setText("");
+                if (summaryTextDamageArea != null) {
+                    summaryTextDamageArea.setText("");
                 }
 
-                if (generateSummaryButton != null) {
-                    generateSummaryButton.setText("Generate AI Summary");
+
+                if (generateSummarySentimentButton != null) {
+                    generateSummarySentimentButton.setText("Generate AI Sentiment Summary");
+                }
+
+                if (generateSummaryDamageButton != null) {
+                    generateSummaryDamageButton.setText("Generate AI Damage Summary");
                 }
             }
         } catch (Exception e) {
@@ -906,7 +1193,7 @@ public class AnalysisController implements Initializable {
 
 
     @FXML
-    private void handleGenerateSummary() {
+    private void handleGenerateSentimentSummary() {
         if (currentProject == null || currentProject.getId() == null) {
             DialogUtil.showError("No Project", "Please select a project before generating a summary.");
             return;
@@ -918,10 +1205,10 @@ public class AnalysisController implements Initializable {
         }
 
         // Disable button and show progress indicator
-        generateSummaryButton.setDisable(true);
-        summaryProgressIndicator.setVisible(true);
+        generateSummarySentimentButton.setDisable(true);
 
         // Create background task for summary generation
+
         Task<AISummaryDTO> summaryTask = new Task<AISummaryDTO>() {
             @Override
             protected AISummaryDTO call() throws Exception {
@@ -934,35 +1221,31 @@ public class AnalysisController implements Initializable {
         summaryTask.setOnSucceeded(event -> {
             try {
                 // Get the generated summary
+
                 AISummaryDTO generatedSummary = summaryTask.getValue();
                 currentSummary = generatedSummary;
 
                 // Update summary text area
-                if (summaryTextArea != null && generatedSummary != null) {
-                    summaryTextArea.setText(generatedSummary.getSummaryText());
-                }
+                if (summaryTextSentimentArea != null && generatedSummary != null) {
+                    summaryTextSentimentArea.setText(TextParser.getCompleteSentimentReport(generatedSummary.getSummaryText()));
 
-                // Update metadata label
-                if (summaryMetadataLabel != null) {
-                    String metadata = formatSummaryMetadata(generatedSummary);
-                    summaryMetadataLabel.setText(metadata);
                 }
 
                 // Change button text to "Regenerate Summary"
-                generateSummaryButton.setText("Regenerate Summary");
+                generateSummarySentimentButton.setText("Regenerate Summary");
 
                 LogUtil.info("Successfully generated AI summary for project: " + currentProject.getName());
 
             } finally {
                 // Re-enable button and hide progress indicator
-                generateSummaryButton.setDisable(false);
-                summaryProgressIndicator.setVisible(false);
+                generateSummarySentimentButton.setDisable(false);
             }
         });
 
         // Handle task failure
         summaryTask.setOnFailed(event -> {
             try {
+
                 Throwable exception = summaryTask.getException();
                 LogUtil.error("AI summary generation failed", exception);
 
@@ -970,8 +1253,80 @@ public class AnalysisController implements Initializable {
 
             } finally {
                 // Re-enable button and hide progress indicator
-                generateSummaryButton.setDisable(false);
-                summaryProgressIndicator.setVisible(false);
+                generateSummarySentimentButton.setDisable(false);
+
+            }
+        });
+
+        // Start the task in a background thread
+        Thread summaryThread = new Thread(summaryTask);
+        summaryThread.setDaemon(true);
+        summaryThread.start();
+    }
+    @FXML
+    private void handleGenerateDamageSummary() {
+        if (currentProject == null || currentProject.getId() == null) {
+            DialogUtil.showError("No Project", "Please select a project before generating a summary.");
+            return;
+        }
+
+        if (aiSummaryService == null) {
+            DialogUtil.showError("Service Unavailable", "AI Summary service is not available.");
+            return;
+        }
+
+        // Disable button and show progress indicator
+        generateSummaryDamageButton.setDisable(true);
+
+        // Create background task for summary generation
+
+        Task<AISummaryDTO> summaryTask = new Task<AISummaryDTO>() {
+            @Override
+            protected AISummaryDTO call() throws Exception {
+                // Call the AI summary service to generate the summary
+                return aiSummaryService.generateProjectSummary(currentProject.getId());
+            }
+        };
+
+        // Handle task success
+        summaryTask.setOnSucceeded(event -> {
+            try {
+                // Get the generated summary
+
+                AISummaryDTO generatedSummary = summaryTask.getValue();
+                currentSummary = generatedSummary;
+
+                // Update summary text area
+
+                if (summaryTextDamageArea != null && generatedSummary != null) {
+                    summaryTextDamageArea.setText(TextParser.getCompleteDamageReport(generatedSummary.getSummaryText()));
+                }
+
+
+                // Change button text to "Regenerate Summary"
+                generateSummaryDamageButton.setText("Regenerate Summary");
+
+                LogUtil.info("Successfully generated AI summary for project: " + currentProject.getName());
+
+            } finally {
+                // Re-enable button and hide progress indicator
+                generateSummaryDamageButton.setDisable(false);
+            }
+        });
+
+        // Handle task failure
+        summaryTask.setOnFailed(event -> {
+            try {
+
+                Throwable exception = summaryTask.getException();
+                LogUtil.error("AI summary generation failed", exception);
+
+                DialogUtil.showError("AI Summary Generation Error", exception.getMessage());
+
+            } finally {
+                // Re-enable button and hide progress indicator
+                generateSummaryDamageButton.setDisable(false);
+
             }
         });
 
@@ -983,16 +1338,16 @@ public class AnalysisController implements Initializable {
 
 
     @FXML
-    private void handleCopySummary() {
+    private void handleCopySentimentSummary() {
         // Check if there is text to copy
-        if (summaryTextArea == null || summaryTextArea.getText() == null || summaryTextArea.getText().trim().isEmpty()) {
-            DialogUtil.showWarning("No Summary", "There is no summary text to copy. Please generate a summary first.");
+        if (summaryTextSentimentArea == null || summaryTextSentimentArea.getText() == null || summaryTextSentimentArea.getText().trim().isEmpty()) {
+            DialogUtil.showWarning("No Sentiment Summary", "There is no summary text to copy. Please generate a summary first.");
             return;
         }
 
         try {
             // Get the summary text
-            String summaryText = summaryTextArea.getText();
+            String summaryText = summaryTextSentimentArea.getText();
 
             // Create clipboard content
             ClipboardContent content = new ClipboardContent();
@@ -1003,16 +1358,46 @@ public class AnalysisController implements Initializable {
             clipboard.setContent(content);
 
             // Show confirmation message
-            DialogUtil.showInformation("Copied", "Summary text has been copied to clipboard.");
+            DialogUtil.showInformation("Copied", "Sentiment Summary text has been copied to clipboard.");
 
-            LogUtil.info("Summary text copied to clipboard");
+            LogUtil.info("Sentiment Summary text copied to clipboard");
 
         } catch (Exception e) {
-            LogUtil.error("Failed to copy summary to clipboard", e);
-            DialogUtil.showError("Copy Failed", "Failed to copy summary text to clipboard.");
+            LogUtil.error("Failed to copy sentiment summary to clipboard", e);
+            DialogUtil.showError("Copy Failed", "Failed to copy sentiment summary text to clipboard.");
         }
     }
 
+    @FXML
+    private void handleCopyDamageSummary() {
+        // Check if there is text to copy
+        if (summaryTextDamageArea == null || summaryTextDamageArea.getText() == null || summaryTextDamageArea.getText().trim().isEmpty()) {
+            DialogUtil.showWarning("No Damage Summary", "There is no Damage summary text to copy. Please generate a summary first.");
+            return;
+        }
+
+        try {
+            // Get the summary text
+            String summaryText = summaryTextDamageArea.getText();
+
+            // Create clipboard content
+            ClipboardContent content = new ClipboardContent();
+            content.putString(summaryText);
+
+            // Copy to system clipboard
+            Clipboard clipboard = Clipboard.getSystemClipboard();
+            clipboard.setContent(content);
+
+            // Show confirmation message
+            DialogUtil.showInformation("Copied", "Damage Summary text has been copied to clipboard.");
+
+            LogUtil.info("Damge Summary text copied to clipboard");
+
+        } catch (Exception e) {
+            LogUtil.error("Failed to copy damage summary to clipboard", e);
+            DialogUtil.showError("Copy Failed", "Failed to copy damage summary text to clipboard.");
+        }
+    }
 
     private String ensureXlsxExtension(String filename) {
         if (filename == null || filename.isEmpty()) {
